Fix: Some items aren't visible when TOC is long.

--- a/html/frame.css
+++ b/html/frame.css
@@ -14,6 +14,8 @@
   z-index: 65535;
   padding-top: 4px !important;
   padding-bottom: 4px !important;
+  height: calc(100% - 32px); 
+  overflow-y: scroll;
 }
 
 #toc > li {
